tests/error/err-hash-0.scm
(define h (hash))

(define n (hash-set h 1 2))

(hash-ref n 2)
